add_executable(0_add 0_add.cu)
add_executable(1_check_dimension 1_check_dimension.cu)
add_executable(2_grid_block 2_grid_block.cu)
add_executable(3_sum_arrays 3_sum_arrays.cu)
add_executable(4_sum_arrays_timer 4_sum_arrays_timer.cu)
add_executable(5_thread_index 5_thread_index.cu)
add_executable(6_sum_matrix 6_sum_matrix.cu)